--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "antd": "^4.16.13",
-    "dgraph-js-http": "^21.3.1",
     "firebase": "^9.4.1",
+    "graphql": "^16.2.0",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
