--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@neo4j/graphql": "^3.0.4",
     "antd": "^4.16.13",
+    "apollo-server-micro": "^3.6.7",
     "graphql": "^16.2.0",
+    "micro": "^9.3.4",
+    "neo4j-driver": "^4.4.5",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
