--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@neo4j/graphql": "^3.0.4",
+    "@neo4j/graphql-ogm": "^3.1.0",
+    "@neo4j/graphql-plugin-auth": "^1.0.0",
     "antd": "^4.16.13",
     "apollo-server-micro": "^3.6.7",
     "graphql": "^16.2.0",
+    "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
     "neo4j-driver": "^4.4.5",
     "next": "12.0.2",
