--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neo4j/graphql-plugin-auth": "^1.0.0",
     "antd": "^4.16.13",
     "apollo-server-micro": "^3.6.7",
+    "argon2": "^0.28.5",
     "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
