--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "sass": "^1.50.1"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
