--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0",
     "sass": "^1.50.1"
   },
   "devDependencies": {
