--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "neo4j-driver": "^4.4.5",
     "next": "12.0.2",
     "react": "17.0.2",
@@ -28,6 +29,7 @@
     "sass": "^1.50.1"
   },
   "devDependencies": {
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "eslint": "7",
