--- a/package.json
+++ b/package.json
@@ -8,32 +8,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.6",
-    "@neo4j/graphql": "^3.0.4",
-    "@neo4j/graphql-ogm": "^3.1.0",
-    "@neo4j/graphql-plugin-auth": "^1.0.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "antd": "^4.16.13",
-    "apollo-server-micro": "^3.6.7",
-    "argon2": "^0.28.5",
-    "graphql": "^16.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "micro": "^9.3.4",
-    "micro-cors": "^0.1.1",
-    "neo4j-driver": "^4.4.5",
-    "next": "12.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.6",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.50.1"
+    "@apollo/client": "3.5.10",
+    "@neo4j/graphql": "3.1.0",
+    "@neo4j/graphql-ogm": "3.1.0",
+    "@neo4j/graphql-plugin-auth": "1.0.0",
+    "@reduxjs/toolkit": "1.8.1",
+    "antd": "4.20.0",
+    "apollo-server-micro": "3.6.7",
+    "argon2": "0.28.5",
+    "graphql": "16.2.0",
+    "jsonwebtoken": "8.5.1",
+    "micro": "9.3.4",
+    "micro-cors": "0.1.1",
+    "neo4j-driver": "4.4.5",
+    "next": "12.1.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-redux": "8.0.1",
+    "redux-persist": "6.0.0",
+    "sass": "1.50.1"
   },
   "devDependencies": {
-    "@types/micro-cors": "^0.1.2",
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.34",
-    "eslint": "7",
-    "eslint-config-next": "12.0.2",
-    "typescript": "4.4.4"
+    "@types/micro-cors": "0.1.2",
+    "@types/node": "17.0.26",
+    "@types/react": "18.0.6",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "typescript": "4.6.3"
   }
 }
