--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "micro-cors": "0.1.1",
     "neo4j-driver": "4.4.5",
     "next": "12.1.5",
+    "nprogress": "^0.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-redux": "8.0.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/micro-cors": "0.1.2",
     "@types/node": "17.0.26",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.6",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
