--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neo4j/graphql-ogm": "3.1.0",
     "@neo4j/graphql-plugin-auth": "1.0.0",
     "antd": "4.20.0",
+    "apollo-link-token-refresh": "^0.4.0",
     "apollo-server-micro": "3.6.7",
     "argon2": "0.28.5",
     "graphql": "16.2.0",
