--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nprogress": "^0.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "sass": "1.50.1"
+    "sass": "1.50.1",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/micro-cors": "0.1.2",
