--- a/package.json
+++ b/package.json
@@ -8,34 +8,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/plots": "^1.0.9",
-    "@apollo/client": "3.5.10",
-    "@neo4j/graphql": "3.1.0",
-    "@neo4j/graphql-ogm": "3.1.0",
+    "@ant-design/plots": "1.0.9",
+    "@apollo/client": "3.6.8",
+    "@neo4j/graphql": "3.4.0",
+    "@neo4j/graphql-ogm": "3.4.0",
     "@neo4j/graphql-plugin-auth": "1.0.0",
-    "antd": "4.20.0",
-    "apollo-link-token-refresh": "^0.4.0",
-    "apollo-server-micro": "3.6.7",
+    "antd": "4.21.3",
+    "apollo-link-token-refresh": "0.4.0",
+    "apollo-server-micro": "3.9.0",
     "argon2": "0.28.5",
-    "graphql": "16.2.0",
+    "graphql": "16.5.0",
     "jsonwebtoken": "8.5.1",
     "micro": "9.3.4",
     "micro-cors": "0.1.1",
-    "neo4j-driver": "4.4.5",
-    "next": "12.1.5",
-    "nprogress": "^0.2.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "sass": "1.50.1",
-    "zustand": "^4.0.0-rc.1"
+    "neo4j-driver": "4.4.6",
+    "next": "12.1.6",
+    "nprogress": "0.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "1.52.3",
+    "zustand": "4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/micro-cors": "0.1.2",
-    "@types/node": "17.0.26",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.6",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
+    "@types/node": "18.0.0",
+    "@types/nprogress": "0.2.0",
+    "@types/react": "18.0.14",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.4"
   }
 }
